bugfix z-index for components container

--- a/src/jquery.grid-composer.css
+++ b/src/jquery.grid-composer.css
@@ -9,6 +9,11 @@
  *  @since      0.0.0
 **/
 
+.gc-components {
+	position: relative;
+	z-index: 1;
+}
+
 .gc-components:after {
 	content: '';
 	clear: both;
